--- a/model/org.eclipse.birt.report.model/build.xml
+++ b/model/org.eclipse.birt.report.model/build.xml
@@ -36,25 +36,28 @@
 	
 	<property name="lib.dir" value="lib" />
 	
+	<property name="core.dir" value="../../org.eclipse.birt.core/org.eclipse.birt.core" />
+	
 	<!-- Class Path -->
 	<path id="class.path">
 		<pathelement path="${build.dir}" />
-		<fileset dir="${eclipse.home}/plugins/">
-			<include name="org.eclipse.core.runtime*/runtime.jar"/>
-			<include name="org.eclipse.osgi*/osgi.jar"/>
-		</fileset>
 		<fileset dir="${lib.dir}">
 			<include name="**/*.jar" />
 		</fileset>
+		<fileset dir="${core.dir}/lib">
+			<include name="**/*.jar" />
+		</fileset>
+		
 	</path>
 
-	<!-- Task Definition of Code Coverage -->
-	<taskdef resource="ant-grobocoverage.properties">
-		<classpath refid="class.path" />
-	</taskdef>
 
 	<!-- Build Java Source Files -->
 	<target name="build">
+		<!-- jar the core and copy it to our lib -->
+		<ant dir="${core.dir}" target="clean"/>
+		<ant dir="${core.dir}" target="jar"/>
+		<copy overwrite="true" tofile="${lib.dir}/core.jar" file="${core.dir}/core.jar"/>
+		
 		<!-- Compile Java Source Files -->
 		<mkdir dir="${build.dir}" />
 		<javac srcdir="${src.dir}" 
@@ -102,7 +105,8 @@
 	<!-- Run All Unit Tests -->
 	<target name="utest" depends="build">
 		<junit printsummary="on" fork="true" haltonfailure="false" failureproperty="tests.failed" showoutput="true">
-		    <jvmarg value="-ea"/>
+		    <jvmarg value="-DBIRT_HOME=${BIRT_HOME}"/>
+			<jvmarg value="-ea"/>
 			<classpath>
 				<pathelement location="${coverage.class.dir}" />
 				<pathelement path="${test.build.dir}" />
