--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -1,5 +1,5 @@
 dataset.editor.page.query=Query
-dataset.new=New data set
+dataset.new=New Data Set
 datasource.new=New Data source
 datasource.editor.page.datasource=Data Source
 sqleditor.action.undo=Undo
@@ -14,21 +14,21 @@ connection.success=Connection Successful
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
 wizard.title.createJoin=Create a join between tables
-wizard.message.selectColumns=Select columns to create your own data set from
-wizard.message.selectTables=Select tables to create your data set from
+wizard.message.selectColumns=Select columns to include in your data set.
+wizard.message.selectTables=Select tables to appear in your data set.
 wizard.label.selectTables=Select tables:
-wizard.label.selectColumns=Select one or more columns from the list:
-wizard.label.available=Available
+wizard.label.selectColumns=Select one or more columns from the list
+wizard.label.available=Available:
 wizard.label.selected=Selected:
 wizard.label.dataSourceName=Data source name:
 wizard.label.driverClass=Driver class:
-wizard.label.url=Database URL
+wizard.label.url=Database URL:
 wizard.label.username=User name:
 wizard.label.password=Password:
 wizard.label.testConnection=Test connection...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
-wizard.label.find=Find:
+wizard.label.find=Find
 wizard.message.createDataSource=Create a new data source
 wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty
