- Redesigning of  the graphical query editor page   - Added more icons in some pages   - Code cleanup

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -13,9 +13,12 @@ connection.failed=Failed to connect to data source
 connection.success=Connection Successful
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
-wizard.title.createJoin=Create a join between tables
+wizard.title.createJoin=Create a join between tables.
 wizard.message.selectColumns=Select columns to include in your data set.
-wizard.message.selectTables=Select tables to appear in your data set.
+tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in the data source.
+tablepage.label.filter=Filter:
+tablepage.title=Select Tables which need to appear in the Data Set.
+tablepage.label.availableItems=Available Items:
 wizard.label.selectTables=Select tables:
 wizard.label.selectColumns=Select one or more columns from the list
 wizard.label.available=Available:
@@ -28,7 +31,8 @@ wizard.label.password=Password:
 wizard.label.testConnection=Test connection...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
-wizard.label.find=Find
+tablepage.label.filter=Apply Filter
+tablepage.label.selecttype=Select Type:
 wizard.message.createDataSource=Create a new data source
 wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty
@@ -38,6 +42,7 @@ error.emptyDatabaseUrl=URL must not be empty
 joins.page.warning=Please make sure to specify atleast one join.\n Do you want to continue ?
 joins.menu.edit=Edit Join 
 joins.menu.delete=Delete Join 
+table.menu.delete=Delete Table
 joins.properties.dialog.title=Join Properties
 joins.properties.dialog.label.operator=Join Operator
 joins.properties.dialog.label.table=Table:
