UI changes to data set editor. Filters page updated to retrieve the list of values for an expression. Description added to the top of most pages. Localized text

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -11,6 +11,7 @@ sqleditor.action.selectAll=Select all
 connection.test=Test connection
 connection.failed=Failed to connect to data source
 connection.success=Connection Successful
+wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
 wizard.title.createJoin=Create a join between tables.
@@ -19,16 +20,16 @@ tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in
 tablepage.label.filter=Filter:
 tablepage.title=Select Tables which need to appear in the Data Set.
 tablepage.label.availableItems=Available Items:
-wizard.label.selectTables=Select tables:
+wizard.label.selectTables=Select Tables:
 wizard.label.selectColumns=Select one or more columns from the list
 wizard.label.available=Available:
 wizard.label.selected=Selected:
-wizard.label.dataSourceName=Data source name:
-wizard.label.driverClass=Driver class:
+wizard.label.dataSourceName=Data Source Name:
+wizard.label.driverClass=Driver Class:
 wizard.label.url=Database URL:
-wizard.label.username=User name:
+wizard.label.username=User Name:
 wizard.label.password=Password:
-wizard.label.testConnection=Test connection...
+wizard.label.testConnection=Test Connection...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.filter=Apply Filter
