Data script object bug fix and DtE unit test restructuring

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -3,7 +3,6 @@ src=src
 core.dir=../org.eclipse.birt.core
 bin=bin
 test_src=test
-utest=utest
 def_logdir=log
 def_user=sa
 def_password=actuate
@@ -13,6 +12,6 @@ def_database=tempDB
 lib=./lib
 java_encoding=gb2312
 sourceVer=1.4
-driverLoc=../test
+driverLoc=test
 dte_jar=dte.jar
 oda_jar=oda.jar
