--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -34,6 +34,7 @@ wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.filter=Apply Filter
 tablepage.label.selecttype=Select Type:
+tablepage.filter.warning=Please specify a filter.
 wizard.message.createDataSource=Create a new data source
 wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty
