--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -4,11 +4,11 @@ core.dir=../org.eclipse.birt.core
 bin=bin
 test_src=test
 def_logdir=log
-def_user=sa
-def_password=actuate
-def_host=192.168.218.88
-def_url=jdbc:jtds:sqlserver://${def_host}
-def_database=tempDB
+def_user=user
+def_password=password
+def_host=localhost
+def_url=jdbc:derby:net://${def_host}:1527/${def_database}
+def_database=DTETest
 lib=./lib
 java_encoding=gb2312
 sourceVer=1.4
