--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -18,6 +18,7 @@ wizard.title.createJoin=Create a join between tables.
 wizard.message.selectColumns=Select columns to include in your data set.
 tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in the data source.
 tablepage.label.filter=Filter:
+tablepage.label.filterNote=(Use '%' to match any character, and '_' to match a single character, in the position where they appear)
 tablepage.title=Select Tables which need to appear in the Data Set.
 tablepage.label.availableItems=Available Items:
 wizard.label.selectTables=Select Tables:
