Change java_encoding from gb2312 to utf-8.

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -10,7 +10,7 @@ def_host=localhost
 def_url=jdbc:derby:net://${def_host}:1527/${def_database}
 def_database=DTETest
 lib=./lib
-java_encoding=gb2312
+java_encoding=utf-8
 sourceVer=1.4
 driverLoc=test
 dte_jar=dte.jar
