Remove redundant oda-jdbc.jar, db2jcc.jar, db2jcc_license_c.jar from DTE project

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -1,6 +1,7 @@
 testDataSource=JDBC
 src=src
 core.dir=../org.eclipse.birt.core
+oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 bin=bin
 test_src=test
 def_logdir=log
@@ -15,3 +16,5 @@ sourceVer=1.4
 driverLoc=test
 dte_jar=dte.jar
 oda_jar=oda.jar
+oda_jdbc_jar=oda-jdbc.jar
+
