Fixed the Following SCR
   SCR 73572: Data Source cant be refreshed when creating a new Data Set.
  SCR 75447: Joins panel does not change size when resized
SCR 75660: Driver class cannot be restored when editing the data source:
SCR 75742: Driver class cannot be saved.
75723: Data Set Select tables  Change Label
SCR 75971: Error message appears when trying to change the name of the jJdbc driver

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -18,7 +18,8 @@ wizard.title.createJoin=Create a join between tables.
 wizard.message.selectColumns=Select columns to include in your data set.
 tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in the data source.
 tablepage.label.filter=Filter:
-tablepage.label.filterNote=(Use '%' to match any character, and '_' to match a single character, in the position where they appear)
+tablepage.button.filter=Apply Filter
+tablepage.label.filterNote=(Use '%' to match any string of zero or more characters, and use '-' to match one character)
 tablepage.title=Select Tables which need to appear in the Data Set.
 tablepage.label.availableItems=Available Items:
 wizard.label.selectTables=Select Tables:
@@ -33,7 +34,6 @@ wizard.label.password=Password:
 wizard.label.testConnection=Test Connection...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
-tablepage.label.filter=Apply Filter
 tablepage.label.selecttype=Select Type:
 tablepage.filter.warning=Please specify a filter.
 wizard.message.createDataSource=Create a new data source
