Added logic of populating the Available list of tables. WE limit the number of displayed items to 500 currently, and a message will be shown if there are more than 500.
Also minor changes in the GUI for the table selection page
This resolves the following issues


   SCR 75020: In query builder, show tables by default, limit to 500 items
  SCR 75649: If filters value is set null, it doesn't work properly when creating a data set.
  SCR 75862:  Populate the Available Items list in the Tables tab of the New Data Set wizard
  SCR 75946: Changes to New Data Set  Select tables
SCR 74447: Many problems with the data set builder GUI
SCR 75992: There is no field displayed in the Informix data set

Also resolved Bugzilla Bug #86314

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -14,14 +14,17 @@ connection.success=Connection Successful
 wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
-wizard.title.createJoin=Create a join between tables.
+wizard.title.createJoin=Create a join between tables by clicking and dragging the cursor from one column \n in a table to a column in another table.
 wizard.message.selectColumns=Select columns to include in your data set.
 tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in the data source.
+tablepage.label.selectTable=Select a table(s) and click on the ">" button to move the table so it will be used in the Data Set.
 tablepage.label.filter=Filter:
+tablepage.label.refresh=Refreshing..
 tablepage.button.filter=Apply Filter
 tablepage.label.filterNote=(Use '%' to match any string of zero or more characters, and use '-' to match one character)
 tablepage.title=Select Tables which need to appear in the Data Set.
 tablepage.label.availableItems=Available Items:
+tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
 wizard.label.selectTables=Select Tables:
 wizard.label.selectColumns=Select one or more columns from the list
 wizard.label.available=Available:
