SCr SCR 74447: Many problems with the data set builder GUI SCR 75037: Data Set Builder: Column view is scrolled to bottom SCR 75418: Table changes position in the join page when removed and added again.

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -22,11 +22,11 @@ tablepage.label.filter=Filter:
 tablepage.label.refresh=Refreshing..
 tablepage.button.filter=Apply Filter
 tablepage.label.filterNote=(Use '%' to match any string of zero or more characters, and use '-' to match one character)
-tablepage.title=Select Tables which need to appear in the Data Set.
+tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
 tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
 wizard.label.selectTables=Select Tables:
-wizard.label.selectColumns=Select one or more columns from the list
+wizard.label.selectColumns=Select one or more columns from the list.
 wizard.label.available=Available:
 wizard.label.selected=Selected:
 wizard.label.dataSourceName=Data Source Name:
