SCR 75338: Width of the List box on the New Data Set Dialog is too short    Changed the Combo box to a ComboViewer,also added i18n support to the items     appearing in the combo viewer.
   SCR 75505: New Data Set has a problem
                       In some cases , the Finish button remains disabled, when it should not have

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -25,6 +25,9 @@ tablepage.label.filterNote=(Use '%' to match any string of zero or more characte
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
 tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
+tablepage.text.tabletype=Table
+tablepage.text.viewtype=View
+tablepage.text.All=All
 wizard.label.selectTables=Select Tables:
 wizard.label.selectColumns=Select one or more columns from the list.
 wizard.label.available=Available:
