--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -53,3 +53,4 @@ FAILED_TO_CREATE_INSTANCE=The class [{0}] can not be instantiated.
 VALUE_REQUIRED=The value of [{0}] is required.
 DUPLICATE_CHOICE_NAME=The choice with the name [{0}] already exists.
 INVALID_PROPERTY_TYPE=The property type [{0}] is invalid.
+VALIDATOR_NAME_REQUIRED=The validator name is required.
