--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -28,28 +28,26 @@
       <import plugin="org.eclipse.compare"/>
    </requires>
    <extension
-         point="org.eclipse.birt.report.designer.ui.datasource">
-      <data-source
-            type="jdbc"
-            name="%datasource.name"
-            id="org.eclipse.birt.data.jdbc">
-         <new-data-source-wizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
-         <data-set
-               type="JdbcSelectDataSet"
-               name="%dataset.jdbcselect"
-               id="org.eclipse.birt.report.data.oda.jdbc.ui.JDBCSelectDataSet">
-            <new-data-set-wizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSetWizard"/>
-            <data-set-editor-page
-                  class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
-                  path="/"
-                  name="%dataset.editor.page.query"
-                  id="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
-         </data-set>
-         <data-source-editor-page
+         point="org.eclipse.birt.report.designer.ui.odadatasource">
+      <ODADataSourceUI
+            name="jdbc"
+            displayName="%datasource.name">
+         <NewDataSourceWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
+         <DataSourceEditorPage
                class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourcePage"
                path="/"
-               name="%datasource.editor.page.connection"
-               id="org.eclipse.birt.report.data.oda.jdbc.ui.data-source-editor.connection"/>
-      </data-source>
+               displayName="%datasource.editor.page.connection"
+               name="org.eclipse.birt.report.data.oda.jdbc.ui.data-source-editor.connection"/>
+         <ODADataSetUI
+               name="JdbcSelectDataSet"
+               displayName="%dataset.jdbcselect">
+            <NewDataSetWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSetWizard"/>
+            <DataSetEditorPage
+                  class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
+                  path="/"
+                  displayName="%dataset.editor.page.query"
+                  name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
+         </ODADataSetUI>
+      </ODADataSourceUI>
     </extension>
    </plugin>
