-	The direction of the join is displayed -	Added ability to change the sequence of the joins. Currently this is done through a context menu displayed when     the right mouse is clicked . The list of joins is displayed in a separate dialog , in which the user can change the sequence
-	Implementation of the Auto Join feature
-	Support for Drag and Drop in the Table selection page

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -51,6 +51,7 @@ error.emptyDatabaseUrl=URL must not be empty
 joins.page.warning=Please make sure to specify atleast one join.\n Do you want to continue ?
 joins.menu.edit=Edit Join 
 joins.menu.delete=Delete Join 
+joins.menu.changejoinsequence=Change Join Sequence
 table.menu.delete=Delete Table
 joins.properties.dialog.title=Join Properties
 joins.properties.dialog.label.operator=Join Operator
@@ -60,3 +61,9 @@ joins.properties.dialog.label.jointype=Join Type
 joins.properties.dialog.label.innerjoin=Only include rows from both the tables matching the Join condition
 joins.properties.dialog.label.outerjoin=Include All rows from "{0}" and only matching rows  from "{1}"
 joins.properties.dialog.label.fullouterjoin=Include All rows from both the tables matching the join condition.
+joins.sequence.dialog.label.title=Change Join Sequence
+joins.sequence.dialog.label.message=Change the join sequence by Selecting a join, and by using the arrow buttons.
+joins.sequence.dialog.fromcolumn=From Column
+joins.sequence.dialog.tocolumn=To Column
+joins.sequence.dialog.jointype=Type of Join
+
