--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -29,25 +29,25 @@
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
-      <ODADataSourceUI
+      <odaDataSourceUI
             name="jdbc"
             displayName="%datasource.name">
-         <NewDataSourceWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
-         <DataSourceEditorPage
+         <newDataSourceWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
+         <dataSourceEditorPage
                class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourcePage"
                path="/"
                displayName="%datasource.editor.page.connection"
                name="org.eclipse.birt.report.data.oda.jdbc.ui.data-source-editor.connection"/>
-         <ODADataSetUI
+         <odaDataSetUI
                name="JdbcSelectDataSet"
                displayName="%dataset.jdbcselect">
-            <NewDataSetWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSetWizard"/>
-            <DataSetEditorPage
+            <newDataSetWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSetWizard"/>
+            <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
                   path="/"
                   displayName="%dataset.editor.page.query"
                   name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
-         </ODADataSetUI>
-      </ODADataSourceUI>
+         </odaDataSetUI>
+      </odaDataSourceUI>
     </extension>
    </plugin>
