Checkin: Added apidoc target to Data Engine ANT build

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -3,6 +3,7 @@ src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 bin=bin
+doc=doc
 test_src=test
 def_logdir=log
 def_user=user
