Resolved the following SCR SCR 76222: Problems with adding third party jdbc driver    Used a Different version of constrcutor of the URL SCR 76569: Wording problems in the Data Set Builder SCR 76467: Error occurs when we pull data set of Informix to designer  SCR 76369: Cannot select any columns on New Data Set dialog for Informix DB -	Programitically it is not possible to determine if a quote is supported by a driver, although there is a function in the java.sql.DataBaseMetadata which is supported to  return thr Quote String. In this case, both the drivers returned the Quote String as Null.   So the fix is not to Quote the table and column name in the SQL  Note that even this approach will fail if the table or column name contains spaces in them Then the user will have to manually have to change the SQL to add the Quotes  ( Note that even this will not work for the IBM Informix driver , which does not like Quotes ) . In Short in the absence of a clean solution, the approach of not using quotes and handling the normal cases  seems better that using quotes , which are needed for special characters

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -14,14 +14,14 @@ connection.success=Connection Successful
 wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
-wizard.title.createJoin=Create a join between tables by clicking and dragging the cursor from one column \n in a table to a column in another table.
-wizard.message.selectColumns=Select columns to include in your data set.
-tablepage.label.Applyfilter=Click Apply Filter to search for tables and views in the data source.
-tablepage.label.selectTable=Select a table(s) and click on the ">" button to move the table so it will be used in the Data Set.
+wizard.title.createJoin=Create a join by dragging a column from one table to the matching column in another table.
+wizard.message.selectColumns=Select one or more tables, then click the ">" button to add them to the data set.
+tablepage.label.Applyfilter=If your schema is large, use the filter to find the tables of interest.
+tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
 tablepage.label.filter=Filter:
 tablepage.label.refresh=Refreshing..
 tablepage.button.filter=Apply Filter
-tablepage.label.filterNote=(Use '%' to match any string of zero or more characters, and use '-' to match one character)
+tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
 tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
@@ -40,7 +40,7 @@ wizard.label.password=Password:
 wizard.label.testConnection=Test Connection...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
-tablepage.label.selecttype=Select Type:
+tablepage.label.selecttype=Type:
 tablepage.filter.warning=Please specify a filter.
 wizard.message.createDataSource=Create a new data source
 wizard.message.editDataSource=Edit the selected data source
