--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -23,8 +23,10 @@
       </library>
    </runtime>
    <requires>
+      <import plugin="org.junit" optional="true"/>
       <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.birt.core"/>      
+      <import plugin="org.eclipse.birt.core"/>
+      <import plugin="org.eclipse.birt.data.oda"/>      
    </requires>
    <extension-point id="oda" name="BIRT Open Data Access" schema="schema/oda.exsd"/>
 
