New ODA runtime support in data engine

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -2,6 +2,7 @@ testDataSource=JDBC
 src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
+oda.dir=../org.eclipse.birt.data.oda
 bin=bin
 doc=doc
 test_src=test
@@ -11,11 +12,13 @@ def_password=password
 def_host=localhost
 def_url=jdbc:derby:net://${def_host}:1527/${def_database}
 def_database=DTETest
-lib=./lib
+lib=lib
 java_encoding=utf-8
 sourceVer=1.4
 driverLoc=test
-dte_jar=dte.jar
-oda_jar=oda.jar
-oda_jdbc_jar=oda-jdbc.jar
+
+dte.jar=dte.jar
+oda.jar=oda.jar
+core.jar=core.jar
+oda.jdbc.jar=oda-jdbc.jar
 
