--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -13,12 +13,105 @@
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.birt.data"/>
+      <import plugin="org.eclipse.birt.data.oda"/>
    </requires>
    <extension
-         name="BIRT ODA-JDBC Bridge"
-         point="org.eclipse.birt.data.oda">
-   <driver name="jdbc" />
+         point="org.eclipse.birt.data.oda.odaDriverRuntime">
+      <odaDriverRuntime
+            odaVersion="2.0"
+            driverName="jdbc"
+            connectionFactoryClass="org.eclipse.birt.report.data.oda.jdbc.JDBCConnectionFactory"
+            setThreadContextClassLoader="false">
+         <providerInfo
+               providerOrg="Eclipse.org"
+               applicationName="BIRT JDBC-ODA Bridge Driver"
+               providerURL="http://www.eclipse.org"
+               copyrightNotice="Copyright (c) 2004-2005 Actuate Corporation. All rights reserved. This program and the accompanying materials are made available under the  terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html"
+               version="1.0"/>
+         <connectionType name="jdbc"/>
+         <dataSetType name="JdbcSelectDataSet">
+            <dataTypeMapping
+                  nativeDataType="BIT"
+                  nativeDataTypeCode="-7"
+                  odaScalarDataType="Integer"/>
+            <dataTypeMapping
+                  nativeDataType="TINYINT"
+                  nativeDataTypeCode="-6"
+                  odaScalarDataType="Integer"/>
+            <dataTypeMapping
+                  nativeDataType="SMALLINT"
+                  nativeDataTypeCode="5"
+                  odaScalarDataType="Integer"/>
+            <dataTypeMapping
+                  nativeDataType="INTEGER"
+                  nativeDataTypeCode="4"
+                  odaScalarDataType="Integer"/>
+            <dataTypeMapping
+                  nativeDataType="BIGINT"
+                  nativeDataTypeCode="-5"
+                  odaScalarDataType="Decimal"/>
+            <dataTypeMapping
+                  nativeDataType="FLOAT"
+                  nativeDataTypeCode="6"
+                  odaScalarDataType="Double"/>
+            <dataTypeMapping
+                  nativeDataType="REAL"
+                  nativeDataTypeCode="7"
+                  odaScalarDataType="Double"/>
+            <dataTypeMapping
+                  nativeDataType="DOUBLE"
+                  nativeDataTypeCode="8"
+                  odaScalarDataType="Double"/>
+            <dataTypeMapping
+                  nativeDataType="NUMERIC"
+                  nativeDataTypeCode="2"
+                  odaScalarDataType="Decimal"/>
+            <dataTypeMapping
+                  nativeDataType="DECIMAL"
+                  nativeDataTypeCode="3"
+                  odaScalarDataType="Decimal"/>
+            <dataTypeMapping
+                  nativeDataType="CHAR"
+                  nativeDataTypeCode="1"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="VARCHAR"
+                  nativeDataTypeCode="12"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="LONGVARCHAR"
+                  nativeDataTypeCode="-1"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="DATE"
+                  nativeDataTypeCode="91"
+                  odaScalarDataType="Date"/>
+            <dataTypeMapping
+                  nativeDataType="TIME"
+                  nativeDataTypeCode="92"
+                  odaScalarDataType="Time"/>
+            <dataTypeMapping
+                  nativeDataType="TIMESTAMP"
+                  nativeDataTypeCode="93"
+                  odaScalarDataType="Timestamp"/>
+            <dataTypeMapping
+                  nativeDataType="BINARY"
+                  nativeDataTypeCode="-2"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="VARBINARY"
+                  nativeDataTypeCode="-3"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="LONGVARBINARY"
+                  nativeDataTypeCode="-4"
+                  odaScalarDataType="String"/>
+            <dataTypeMapping
+                  nativeDataType="BOOLEAN"
+                  nativeDataTypeCode="16"
+                  odaScalarDataType="Integer"/>
+          </dataSetType>
+      </odaDriverRuntime>
    </extension>
    
 </plugin>
