--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -18,7 +18,6 @@
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.report.model"/>
-      <import plugin="org.eclipse.birt.data"/>
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.draw2d"/>
       <import plugin="org.eclipse.birt.report.designer.core"/>
@@ -26,6 +25,7 @@
       <import plugin="org.eclipse.gef"/>
       <import plugin="org.eclipse.jface.text"/>
       <import plugin="org.eclipse.compare"/>
+      <import plugin="org.eclipse.birt.data.oda"/>
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
