Fix a bug of last checkin

--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -8,6 +8,7 @@
    <runtime>
       <library name="lib/js.jar">
          <export name="*"/>
+      </library>
       <library name="dte.jar">
          <export name="*"/>
       </library>
