--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -10,7 +10,7 @@ def_logdir=log
 def_user=user
 def_password=password
 def_host=localhost
-def_url=jdbc:derby:net://${def_host}:1527/${def_database}
+def_url=jdbc:derby:${def_database}
 def_database=DTETest
 lib=lib
 java_encoding=utf-8
@@ -21,4 +21,5 @@ dte.jar=dte.jar
 oda.jar=oda.jar
 core.jar=core.jar
 oda.jdbc.jar=oda-jdbc.jar
+
 
