Add extension support for ODA driver, rename extension pointer and drop "publicDriverProperties"

--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -17,5 +17,6 @@
    <requires>
       <import plugin="org.eclipse.birt.core"/>
    </requires>
-   <extension-point id="reportitem" name="reportitem" schema="schema/element.exsd"/>   
+   <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
+   <extension-point id="odaDriverModel" name="odaDriverModel" schema="schema/odaDriver.exsd"/>
 </plugin>
