--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -15,6 +15,10 @@
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.birt.data.oda"/>
    </requires>
+   
+   <extension-point id="driverinfo" name="JDBC Driver Information Extension" 
+   			schema="schema/driverinfo.exsd"/>
+   			
    <extension
          point="org.eclipse.birt.data.oda.odaDriverRuntime">
       <odaDriverRuntime
@@ -113,5 +117,30 @@
           </dataSetType>
       </odaDriverRuntime>
    </extension>
-   
+   <extension
+         point="org.eclipse.birt.report.data.oda.jdbc.driverinfo">
+      <jdbcDriver
+            driverClass="sun.jdbc.odbc.JdbcOdbcDriver"
+            urlTemplate="jdbc:odbc:&lt;data-source-name&gt;[;&lt;attribute-name&gt;=&lt;attribute-value&gt;]*"
+            name="Sun JDBC-ODBC Bridge Driver"/>
+      <jdbcDriver
+            driverClass="net.sourceforge.jtds.jdbc.Driver"
+            urlTemplate="jdbc:jtds:[sqlserver|sybase]://&lt;server&gt;[:&lt;port&gt;][/&lt;database&gt;][;&lt;property&gt;=&lt;value&gt;[;...]]"
+            name="jTDS 1.02  for MSSQL and Sybase">
+         <driverBinary file="jtds-1.0.2.jar"/>
+      </jdbcDriver>
+      <jdbcDriver
+            driverClass="org.apache.derby.jdbc.EmbeddedDriver"
+            urlTemplate="jdbc:derby:[subsubprotocol:][databasename][;attributes]"
+            name="Apache Derby Embedded Driver">
+         <driverBinary file="derby.jar"/>
+      </jdbcDriver>
+      <jdbcDriver
+            driverClass="com.ibm.db2.jcc.DB2Driver"
+            urlTemplate="jdbc:derby:net://&lt;server&gt;[:&lt;port&gt;]/&lt;databaseName&gt;[;&lt;attr&gt;=&lt;value&gt; ]*"
+            name="Apache Derby Network (IBM DB2 Universal Driver)">
+         <driverBinary file="db2jcc.jar"/>
+         <driverBinary file="db2jcc_license_cu.jar"/>
+      </jdbcDriver>
+   </extension>
 </plugin>
